# ztranslator

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
tests/: test___main__.py  test_cli.py  test_translator.py
translator/: __init__.py  __main__.py  cli.py  clip.py  scripts.py  translate.py
