[tool.poetry]
name = "ztranslator"
version = "0.0.7"
description = "Powerful command line translator."
authors = ["André P. Santos <andreztz@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
notify-send = "^0.0.13"

[tool.poetry.scripts]
ztranslator="translator.__main__:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
