[tool.poetry]
name = "ztranslator"
version = "0.0.8"
description = "Powerful command line translator."
authors = ["André P. Santos <andreztz@gmail.com>"]
packages = [
    { include = "translator" }
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
notify-send = "^0.0.13"

[tool.poetry.scripts]
ztranslator="translator.__main__:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
